# tm-switcher

./: .env.template  .gitignore  CONTRIBUTING.md  LICENSE  README.md  deno.json  package-lock.json  package.json  rollup.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release-candidate.yml
host/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
host/src/: main.ts  styles.css
host/src-tauri/: Cargo.toml  tauri.conf.json
host/src-tauri/capabilities/: migrated.json
host/src-tauri/icons/: icon.icns
host/src-tauri/src/: main.rs  process.rs
schemas/: config.schema.json  example.config.json
scripts/: compile_switcher.sh  copy_switcher.sh  set_version.sh
secret.template/: logs.json  vextm.json
src/: authenticate.ts  configuration.ts  input.ts  main.ts
switcher/: authenticate.ts  behavior.ts  input.ts  main.ts  rollup.config.js  tsconfig.json
switcher/behaviors/: config.ts  display.ts  heartbeat.ts  index.ts  logging.ts  recording.ts  report.ts  statistics.ts  switcher.ts
switcher/utils/: authenticate.ts  env.ts  input.ts  keypress.ts  logging.ts  match.ts  options.ts  output.ts  report.ts  secrets.ts  update.ts
workers/broker/: package-lock.json  package.json  vitest.config.mjs  worker-configuration.d.ts  wrangler.jsonc
workers/broker/src/: index.ts
workers/broker/test/: index.spec.js
